--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
   color: white;
   text-align: center;
   }
-  <style>
+  </style>
  </head>
  <body>
  <h1>Clicks Per Second Tester</h1>
  <p id="mainpara">Click the Button as fast as you can!</p>
  <button type="submit">CLICK ME!</button>
- <p id="score>0</p>
+ <p id="score">0</p>
  <p id="persecond">0.00</p>
  </body>
  </html>
