--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
   text-align: center;
   }
   button {
-  height: 80px;
+  height: 512px;
   line-height: 80px;  
-  width: 80px;  
-  font-size: 2em;
+  width: 512px;  
+  font-size: 20px;
   border-radius: 50%;
   background-color: #00264d;
   color: white;
   text-align: center;
+  font-family: Nunito Sans;
   }
   </style>
  </head>
