--- a/index.html
+++ b/index.html
@@ -27,5 +27,28 @@
  <p id="score">0</p>
  <p id="persecond">0.00</p>
  </body>
+ <script>
+ button.onclick = () => applyCursorRippleEffect(event);
+
+function applyCursorRippleEffect(e) {
+   const ripple = document.createElement("div");
+  
+   ripple.className = "ripple";
+   document.body.appendChild(ripple);
+
+  ripple.style.left = `${e.clientX}px`;
+  ripple.style.top = `${e.clientY}px`; 
+   ripple.style.animation = `ripple-effect .4s  linear`;
+   ripple.onanimationend = () => {
+     document.body.removeChild(ripple);
+     
+   }
+  
+}
+const all = document.body.getElementsByTagName("*");
+for (var i = 0;  i < all.length; ++i) {
+  all[i].onclick = (event) => event.stopPropagation();
+}
+ </script> 
  </html>
  
