--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
  <p id="persecond">0.00</p>
  </body>
  <script>
- button.onclick = () => applyCursorRippleEffect(event);
+document.onclick = () => applyCursorRippleEffect(event);
 
 function applyCursorRippleEffect(e) {
    const ripple = document.createElement("div");
@@ -45,6 +45,9 @@ function applyCursorRippleEffect(e) {
    }
   
 }
+
+// extra and optional part:
+
 const all = document.body.getElementsByTagName("*");
 for (var i = 0;  i < all.length; ++i) {
   all[i].onclick = (event) => event.stopPropagation();
