--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
  <h1>Clicks Per Second Tester</h1>
  <p id="mainpara">Click the Button as fast as you can!</p>
  <button type="submit">CLICK ME!</button>
- <p id="Clik">0</p>
- <p id="CPS">0.00</p>
+ <p id="nothingHere">Clicks</p><p id="Clik">0</p>
+ <p id="nothingHere">CPS</p><p id="CPS">0.00</p>
  </body>
  <script>
  var cps = document.getElementById("cps");
